shimmer_UI added

--- a/app/globals.css
+++ b/app/globals.css
@@ -13,3 +13,52 @@ html.dark {
 .borderBlack {
   @apply border border-black/10;
 }
+
+/* Style the scrollbar */
+::-webkit-scrollbar {
+  width: 10px; /* Set the width of the scrollbar */
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #3c3c3c; /* Change the background color of the scrollbar track */
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888; /* Change the color of the scrollbar handle */
+  border-radius: 5px; /* Set border radius to make it rounded */
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; /* Change the color of the scrollbar handle on hover */
+}
+
+@keyframes bounce {
+  0%,
+  100% {
+    transform: translateY(25%);
+    animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
+  }
+  50% {
+    transform: translateY(0);
+    animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
+  }
+}
+
+.animate-bounce {
+  animation: bounce 1s infinite;
+}
+
+/* animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite; */
+
+@keyframes pulse {
+  0%,
+  100% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+}
